# ACP-demo-

./: .env.example  README.md  README.md.url  acp_client.py  cover_letter_acp_server.py  crew_acp_server.py  interview_acp_server.py  job_search_acp_server.py  main.py  profile_acp_server.py  pyproject.toml  ranking_acp_server.py  resume_acp_server.py  smolagents_acp_server.py
scripts/: check_agents.ps1  start_all_servers.ps1
