[project]
name = "acp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "acp-sdk>=1.0.3",
    "crewai[tools]>=1.14.7",
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "ollama>=0.6.2",
    "python-dotenv>=1.2.2",
    "smolagents[litellm]>=1.26.0",
    "uvicorn==0.35.0",
]
